openshift/csv-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: 2017-10-23T12:11:23Z
  generation: 4
  labels:
    app: csv-service
  name: csv-service
  namespace: myproject
  resourceVersion: "5430"
  selfLink: /oapi/v1/namespaces/myproject/deploymentconfigs/csv-service
  uid: 4986b692-b7eb-11e7-b6ef-c85b76847344
spec:
  replicas: 1
  selector:
    app: csv-service
    deploymentconfig: csv-service
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: csv-service
        deploymentconfig: csv-service
    spec:
      containers:
      - image: 172.30.1.1:5000/myproject/csv-s2i-build@sha256:d8c1728cb2383222183ed61b18d3ab9bcecf479812fb847230a3ce5b7e35b152
        imagePullPolicy: Always
        name: csv-service
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - csv-service
      from:
        kind: ImageStreamTag
        name: csv-s2i-build:latest
        namespace: myproject
      lastTriggeredImage: 172.30.1.1:5000/myproject/csv-s2i-build@sha256:d8c1728cb2383222183ed61b18d3ab9bcecf479812fb847230a3ce5b7e35b152
    type: ImageChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-10-23T12:55:34Z
    lastUpdateTime: 2017-10-23T12:55:34Z
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: 2017-10-23T12:55:35Z
    lastUpdateTime: 2017-10-23T12:55:37Z
    message: replication controller "csv-service-2" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - imageTrigger:
        from:
          kind: ImageStreamTag
          name: csv-s2i-build:latest
          namespace: myproject
      type: ImageChange
    message: image change
  latestVersion: 2
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
