openshift/csv-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: csv-service
  namespace: webtest
  labels:
    app: csv-service
spec:
  to:
    kind: Service
    name: csv-service
  tls: null
  host: csvservice.webtest.apps.ocp.sohlberg.io
  path: /csv/api/v1
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
